<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content" android:layout_height="wrap_content"
	android:orientation="vertical" android:weightSum="1">
    <ImageView android:id="@+id/imageView1" android:src="@drawable/sielogo" android:scaleType="fitXY" android:layout_width="match_parent" android:layout_height="150dp" android:layout_weight="0.20"></ImageView>
	<TextView android:id="@+id/TextView01" android:text="@string/welcome_intro" android:layout_gravity="center_horizontal" android:layout_width="178dp" android:layout_height="0dp" android:layout_weight="0.20"></TextView>
	<TextView android:textAppearance="?android:attr/textAppearanceSmall" android:layout_width="wrap_content" android:text="创新院@2011" android:id="@+id/textView1" android:layout_height="0dp" android:layout_weight="0.20" android:layout_gravity="center_horizontal"></TextView>
	<LinearLayout android:id="@+id/LinearLayout01"
		android:orientation="horizontal" android:weightSum="1" android:layout_width="680dp" android:layout_marginTop="15dp" android:layout_height="0dp" android:layout_weight="0.20">
		<Spinner android:layout_width="wrap_content"
			android:id="@+id/SpinnerLdapConfig" android:minWidth="270dip" android:layout_gravity="center" android:layout_height="64dp" android:layout_weight="0.78"></Spinner>
		<Button android:id="@+id/BtnConnect1"
			android:text="@string/connect" android:layout_gravity="center" android:layout_width="100dp" android:layout_height="64dp" android:layout_weight="0.22"></Button>
	</LinearLayout>




<LinearLayout android:id="@+id/LinearLayout02" android:orientation="horizontal" android:weightSum="1" android:layout_marginTop="20dp" android:layout_height="0dp" android:layout_marginLeft="100dip" android:layout_weight="0.33" android:layout_width="match_parent">
<Button android:id="@+id/BtnNew1" android:text="@string/btn_new" android:layout_margin="1dip" android:width="50dip" android:layout_height="64dp" android:layout_width="100dp" android:layout_weight="0.25"></Button>
<Button android:id="@+id/BtnModify1" android:text="@string/btn_modify" android:layout_margin="1dip" android:width="50dip" android:layout_height="64dp" android:layout_width="100dp" android:layout_weight="0.25"></Button>
<Button android:id="@+id/BtnDelete1" android:text="@string/btn_delete" android:layout_margin="1dip" android:width="50dip" android:layout_height="64dp" android:layout_width="100dp" android:layout_weight="0.25"></Button>
<Button android:layout_height="64dp" android:id="@+id/btn_main_quit" android:layout_margin="1dip" android:layout_width="100dp" android:text="退出" android:width="50dip" android:layout_weight="0.25"></Button>
</LinearLayout>
</LinearLayout>
